--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -442,7 +442,21 @@
     .form_content .formRow:first-child {border-top:1px solid #e0e0e0}
 	.form_content .formRow:last-child {border-bottom:1px solid #e0e0e0}
 	.form_content .formRow {background:#fafafa;border-color:#e0e0e0;border-bottom:none}
-	label.error {font-weight:700;font-size:12px;clear:both;position:relative;margin-top:-6px;color:#c00000 !important;float:none;display:block}	.error {clear:both;color:#FF0000;float:none;display:none}
+	label.error {
+		font-weight:700;
+		font-size:12px;
+		clear:both;
+		position:relative;
+		margin-top:-6px;
+		color:#c00000 !important;
+		float:none;
+		display:block;		
+	}
+	.error {clear:both;color:#FF0000;float:none;display:none;font-family: tahoma !important;}
+	.sp_required{
+		color: #ff0000;
+		font-family: tahoma;
+	}
 
 	/* timepicker */
 		.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
